apps/speedtest-tracker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest-tracker
  annotations:
    volsync.backube/privileged-movers: "true"
